[package]
name = "launchpad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# # fix error: use of unstable library feature 'build_hasher_simple_hash_one'
ahash = "=0.8.6"
solana-program = "=1.17.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
